<resources>
    <string name="app_name">PhotoViewLibrary</string>
    <string name="familyphoto">家庭相册</string>
    <string name="family_cloudphoto">家庭云相册</string>
    <string name="string_image">本地图库</string>
    <string name="cloud_photo">本地视频</string>
    <string name="photo">相 册</string>
    <string name="noInfo_hint">暂无信息</string>
    <string name="upload_success">上传成功!</string>
    <string name="uploading">正在上传...</string>
    <string name="show_no_address">不显示位置</string>
    <string name="delete_now">正在删除...</string>
    <string name="please_wait">请稍等...</string>
    <string name="input_right_name">请输入正确的文件名</string>
    <string name="name_exist">文件名已存在</string>
    <string name="moving_wait">移动中，请稍后...</string>
    <string name="loading">正在加载...</string>

    <string name="string_canadd">可以再添加</string>
    <string name="string_piece">张</string>
    <string name="string_takephoto">拍照</string>
    <string name="string_selectfromphoto">从手机相册里选择</string>
    <string name="button_publish">发 布</string>
    <string name="unselect_delete_file">未选择删除文件</string>
    <string name="no_delete_file">没有可删除的文件</string>
    <string name="unselect_file">未选中文件</string>
    <string name="moveto_photo">移动到相册</string>
    <string name="new_create_photo">新建相册</string>
    <string name="photo_named">为新相册命名</string>
    <string name="rename">重命名</string>
    <string name="shared_to_cloudphoto">分享至云相册</string>
    <string name="shared_to">移动到</string>
    <string name="please_login">请先登录</string>

    <string name="delete_operate">删除操作</string>
    <string name="sure_delete">确定删除?</string>
    <string name="button_confirm">确定</string>
    <string name="button_cancel">取消</string>
    <string name="button_delete">删 除</string>
    <string name="button_select_all">全 选</string>
    <string name="button_cancel_select_all">取消全选</string>
    <string name="string_date_patten">yyyy年MM月</string>
    <string name="string_date_month">MM月</string>

    <string name="string_share_name">蛋蛋</string>
</resources>
