<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="74dp"
    android:background="@drawable/toolbar_background"
    android:minHeight="?attr/actionBarSize">

    <TextView
        android:id="@+id/titleName"
        style="@style/text_title_style"
        android:layout_centerInParent="true"
        android:text="@string/photo"/>

    <ImageView
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/DP_20PX"
        android:paddingRight="@dimen/DP_20PX"
        android:scaleType="fitCenter"
        android:src="@drawable/back_icon"/>

    <TextView
        android:id="@+id/bt_cancel"
        style="@style/text_title_style"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/DP_20PX"
        android:paddingRight="@dimen/DP_20PX"
        android:text="@string/button_cancel"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/bt_selectAll"
        style="@style/text_title_style"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/DP_20PX"
        android:paddingRight="@dimen/DP_20PX"
        android:text="@string/button_select_all"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/DP_20PX"
        android:paddingRight="@dimen/DP_20PX"
        android:scaleType="fitCenter"
        android:src="@drawable/add"
        android:visibility="gone"/>

</RelativeLayout>