<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/DP_20PX"
              android:orientation="vertical">

    <TextView
        style="@style/text_style"
        android:text="@string/moveto_photo"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/folderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DP_15PX"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@color/line_color"/>

    <LinearLayout
        android:id="@+id/layout_newFolder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_40PX"
        android:layout_marginTop="@dimen/DP_5PX"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add2"/>

        <TextView
            style="@style/text_style"
            android:layout_marginLeft="@dimen/DP_10PX"
            android:text="@string/new_create_photo"
            android:textSize="@dimen/text_small_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DP_5PX"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/text_style"
            android:text="@string/photo_named"
            android:textSize="@dimen/text_small_size"/>

        <EditText
            android:id="@+id/et_folderName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP_40PX"
            android:layout_marginTop="@dimen/DP_5PX"
            android:textColor="@color/gray"
            android:background="@color/background_color"/>
    </LinearLayout>

</LinearLayout>